--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-  #- pip install -r tests/requirements.txt --use-mirrors
+  - pip install -r tests/requirements.txt --use-mirrors
   - pip install -e git+git://github.com/courgette/big-brother-bot.git#egg=b3 --use-mirrors
 
 # command to run tests, e.g. python setup.py test
